<resources>
    <string name="app_name">Mysic</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registre">Registre</string>
    <string name="already_registered">Already Registered?</string>
</resources>
